cilium-cli/connectivity/builder/manifests/template/testdata/random_replace_dns_label/in.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "client-egress-tls-sni-random-wildcard"
specs:
- description: "TLS SNI policy with random wildcard"
  endpointSelector:
    matchLabels:
      kind: client
  egress:
  - toPorts:
    - ports:
      - port: "443"
        protocol: "TCP"
      serverNames:
      - "{{randomReplaceDnsLabel (trimSuffix .ExternalTarget ".") "*"}}"
      - "{{randomReplaceDnsLabel (trimSuffix .ExternalTarget ".") "*"}}"
      - "{{randomReplaceDnsLabel (trimSuffix .ExternalTarget ".") "*"}}"
      - "{{randomReplaceDnsLabel (trimSuffix .ExternalTarget ".") "*"}}"
      - "{{randomReplaceDnsLabel (trimSuffix .ExternalTarget ".") "*"}}"
      - "{{randomReplaceDnsLabel (trimSuffix .ExternalTarget ".") "*"}}"
      - "{{randomReplaceDnsLabel (trimSuffix .ExternalTarget ".") "*"}}"
      - "{{randomReplaceDnsLabel (trimSuffix .ExternalTarget ".") "*"}}"
      - "{{randomReplaceDnsLabel (trimSuffix .ExternalTarget ".") "*"}}"
      - "{{randomReplaceDnsLabel (trimSuffix .ExternalTarget ".") "*"}}"
