cilium-cli/connectivity/builder/manifests/template/testdata/random_replace_dns_label/out.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "client-egress-tls-sni-random-wildcard"
specs:
- description: "TLS SNI policy with random wildcard"
  endpointSelector:
    matchLabels:
      kind: client
  egress:
  - toPorts:
    - ports:
      - port: "443"
        protocol: "TCP"
      serverNames:
      - "foo-bar.exam*le.test.cilium.io."
      - "foo-bar.example.tes*t.cilium.io."
      - "foo-bar.example.test.ci*ium.io."
      - "foo-bar.example.test.cilium.i*o."
      - "foo-bar.*le.test.cilium.io."
      - "foo-bar.example.te*t.cilium.io."
      - "f*o-bar.example.test.cilium.io."
      - "foo-bar.examp*e.test.cilium.io."
      - "foo-bar.exa*le.test.cilium.io."
      - "foo-bar.example.test.ciliu*m.io."
